# grimoirelab-perceval-public-inbox-old

./: .gitignore  README.md  pyproject.toml
perceval/backends/public_inbox/: public_inbox.py
tests/: test_public_inbox.py
